force-app/main/default/objects/Account/fields/Addressee_Email1__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Email1__c</fullName>
    <label>נמען - דוא&quot;ל</label>
    <type>Email</type>
</CustomField>