force-app/main/default/objects/Account/fields/Addressee_Email2__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Email2__c</fullName>
    <label>נמען נוסף - דוא&quot;ל</label>
    <type>Email</type>
</CustomField>