force-app/main/default/objects/Account/fields/Addressee_First_Name1__c.field-meta.xml
<CustomField>
    <fullName>Addressee_First_Name1__c</fullName>
    <label>נמען  שם פרטי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>