force-app/main/default/objects/Account/fields/Addressee_Last_Name1__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Last_Name1__c</fullName>
    <label>נמען שם משפחה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>