force-app/main/default/objects/Account/fields/Addressee_phone1__c.field-meta.xml
<CustomField>
    <fullName>Addressee_phone1__c</fullName>
    <label>נמען - נייד</label>
    <type>Phone</type>
</CustomField>