force-app/main/default/objects/Account/fields/Addressee_phone2__c.field-meta.xml
<CustomField>
    <fullName>Addressee_phone2__c</fullName>
    <label>נמען נוסף - נייד</label>
    <type>Phone</type>
</CustomField>