force-app/main/default/objects/Account/fields/Addressee_phone2_G__c.field-meta.xml
<CustomField>
    <fullName>Addressee_phone2_G__c</fullName>
    <formula>IF( BEGINS(Addressee_phone2__c, &quot;0&quot;) , 

&quot;+972&quot; + Right( 
SUBSTITUTE(Addressee_phone2__c, &quot;-&quot; , &quot;&quot;) , LEN( 
SUBSTITUTE(Addressee_phone2__c, &quot;-&quot; , &quot;&quot;) ) - 1 ) , &quot;+972&quot; + 
SUBSTITUTE(Addressee_phone2__c, &quot;-&quot; , &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>נמען נוסף - נייד מלא</label>
    <type>Text</type>
</CustomField>