force-app/main/default/objects/Account/fields/Addressee_Proximity1__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Proximity1__c</fullName>
    <label>נמען - קירבה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proximity_List</valueSetName>
    </valueSet>
</CustomField>