force-app/main/default/objects/Account/fields/Addressee_Proximity2__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Proximity2__c</fullName>
    <label>נמען נוסף - קירבה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proximity_List</valueSetName>
    </valueSet>
</CustomField>