force-app/main/default/objects/Account/fields/Addressee_ProximityNew1__c.field-meta.xml
<CustomField>
    <fullName>Addressee_ProximityNew1__c</fullName>
    <label>נמען - קירבה</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>הפונה הוא הנוסע</fullName>
            </value>
            <value>
                <fullName>אמא/אבא</fullName>
            </value>
            <value>
                <fullName>אחות/אח</fullName>
            </value>
            <value>
                <fullName>בת/בן זוג</fullName>
            </value>
            <value>
                <fullName>חבר/ה</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
            <value>
                <fullName>בת\בן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>