force-app/main/default/objects/Account/fields/Card_Addressing__c.field-meta.xml
<CustomField>
    <fullName>Card_Addressing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס פונה</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (כרטיס פונה)</relationshipLabel>
    <relationshipName>Card_Addressing</relationshipName>
    <type>Lookup</type>
</CustomField>