force-app/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>סיווג</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לקוח</fullName>
            </value>
            <value>
                <fullName>ספק</fullName>
                <label>לקוח עסקי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>