force-app/main/default/objects/Account/fields/Contaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Contaction_Status__c</fullName>
    <label>קשר פונה נוסע</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>הפונה הוא הנוסע</fullName>
            </value>
            <value>
                <fullName>אמא/אבא</fullName>
            </value>
            <value>
                <fullName>אחות/אח</fullName>
            </value>
            <value>
                <fullName>בת/בן זוג</fullName>
            </value>
            <value>
                <fullName>חבר/ה</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>