force-app/main/default/objects/Account/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>תאריך יצירת כרטיס</label>
    <required>true</required>
    <type>Date</type>
</CustomField>