force-app/main/default/objects/Account/fields/extension__c.field-meta.xml
<CustomField>
    <fullName>extension__c</fullName>
    <label>תוספות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>