force-app/main/default/objects/Account/fields/First_Name_English__c.field-meta.xml
<CustomField>
    <fullName>First_Name_English__c</fullName>
    <label>שם פרטי באנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>