force-app/main/default/objects/Account/fields/Get_To_magnus__c.field-meta.xml
<CustomField>
    <fullName>Get_To_magnus__c</fullName>
    <label>איך הגעתי למגנוס</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>שמעתי מחבר</fullName>
            </value>
            <value>
                <fullName>מצאתי באינטרנט</fullName>
            </value>
            <value>
                <fullName>ראיתי בפייסבוק</fullName>
            </value>
            <value>
                <fullName>קראתי בעיתון</fullName>
            </value>
            <value>
                <fullName>ראיתי בטלויזיה</fullName>
            </value>
            <value>
                <fullName>שמעתי ברדיו</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>