force-app/main/default/objects/Account/fields/interesting_insurance__c.field-meta.xml
<CustomField>
    <fullName>interesting_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מעוניין בביטוח</label>
    <type>Checkbox</type>
</CustomField>