force-app/main/default/objects/Account/fields/Last_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_English__c</fullName>
    <label>שם משפחה באנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>