force-app/main/default/objects/Account/fields/Male_Female__c.field-meta.xml
<CustomField>
    <fullName>Male_Female__c</fullName>
    <label>מין</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>זכר</fullName>
            </value>
            <value>
                <fullName>נקבה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>