force-app/main/default/objects/Account/fields/Marketing_Content__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מאשר קבלת תוכן שיווקי</label>
    <type>Checkbox</type>
</CustomField>