force-app/main/default/objects/Account/fields/Other_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Other_Insurance_Company__c</fullName>
    <label>חברת ביטוח - אחר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>