force-app/main/default/objects/Account/fields/Passenger_Id__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Id__c</fullName>
    <label>הנוסע-ת.זהות</label>
    <length>9</length>
    <type>Text</type>
</CustomField>