force-app/main/default/objects/Account/fields/Passenger_Mail__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Mail__c</fullName>
    <label>הנוסע-דוא&quot;ל</label>
    <type>Email</type>
</CustomField>