force-app/main/default/objects/Account/fields/Phone_G__c.field-meta.xml
<CustomField>
    <fullName>Phone_G__c</fullName>
    <formula>IF( BEGINS(Phone, &quot;0&quot;) , 

&quot;+972&quot; + Right( 
SUBSTITUTE(Phone, &quot;-&quot; , &quot;&quot;) , LEN( 
SUBSTITUTE(Phone, &quot;-&quot; , &quot;&quot;) ) - 1 ) , &quot;+972&quot; + 
SUBSTITUTE(Phone, &quot;-&quot; , &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone G</label>
    <type>Text</type>
</CustomField>