force-app/main/default/objects/Account/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>הערות שירות</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>