force-app/main/default/objects/Account/fields/Travel_Card__c.field-meta.xml
<CustomField>
    <fullName>Travel_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס נוסע</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>נוסעים</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>