force-app/main/default/objects/Account/validationRules/Filling_Passenger_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Filling_Passenger_Phone_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK(  Passenger_Phone_Number__c ) , 
      interesting_insurance__c )</errorConditionFormula>
    <errorMessage>שדה טלפון נוסע ריק -יש למלא אותו</errorMessage>
</ValidationRule>