force-app/main/default/objects/Account/listViews/OTher.listView-meta.xml
<ListView>
    <fullName>OTher</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Get_To_magnus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Get_To_magnus__c</field>
        <operation>equals</operation>
        <value>אחר</value>
    </filters>
    <label>OTher</label>
    <language>en_US</language>
</ListView>